# sesame

./: .gitignore  Cargo.toml  README.md  armory.toml  justfile
.github/workflows/: merge-main.yaml  pull-request.yaml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  db.rs  main.rs
