[workspace]
members = ["cli", "model", "server"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.5.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive", "env", "wrap_help"] }
confique = { version = "0.3.0", features = ["toml"] }
dirs = "6.0.0"
fjall = "3.1.4"
http = "1.3.1"
inquire = "0.7.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
