[package]
name = "sesame"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
confique.workspace = true
dirs.workspace = true
http.workspace = true
inquire.workspace = true
reqwest.workspace = true
serde.workspace = true
sesame-model = { path = "../model" }
toml.workspace = true
