[package]
name = "sesame-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
confique.workspace = true
dirs.workspace = true
fjall.workspace = true
http.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sesame-model = { path = "../model" }
serde_json.workspace = true
